fix work examples spacing

--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,8 @@ hr {
 #image-container {
   padding-top: 35px;
   padding-bottom: 50px;
-  margin: 0 auto;
+  text-align: center;
+  max-width: 1450px;
 }
 
 .images:nth-child(2),
@@ -415,12 +416,6 @@ hr {
   #about .section-title,
   #work-experiences .section-title {
     margin-bottom: 20px;
-  }
-
-  #image-container {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
   }
 
   #email {
